<resources>
    <string name="app_name">EvaluacionII</string>
    <string name="Aceptar">Aceptar</string>
    <string name="direccion_1">Direccion 1</string>
    <string name="latitud_1">Latitud 1</string>
    <string name="longitud_1">Longitud 1</string>
    <string name="direccion_2">Direccion 2</string>
    <string name="latitud_2">Latitud 2</string>
    <string name="longitud_2">Longitud 2</string>
    <string name="direccion_3">Direccion 3</string>
    <string name="latitud_3">Latitud</string>
    <string name="longitud_3">Longitud</string>
    <string name="ingresar_direcciones">Ingresar Direcciones</string>
    <string name="todo">TODO</string>
</resources>